Mar 01, 2005

  * FIXED/ADDED: encoding issues.  Now allows writing RDF files using
    US-ASCII, ISO latin-1 or UTF-8 (default) encoding.

Feb 24, 2005

  * MODIFIED: rdf_edit.pl: broadcast missing journal instead of creating
    an XPCE dialog.  More flexible and removes XPCE dependency.

Feb 22, 2005

  * FIXED: rdf_save/[1,2] to properly quote attributes.  Anjo Anjewierden.

Feb 18, 2005

  * FIXED: rdf(X,Y,literal(lang(L,W))): not indexed query.   Djamé Seddah.

Jan 27, 2005

  * ADDED: wide-character support in label matching (rdf_match_label/3)
    and literals queries (rdf(S, P, literal(substring(foo), X))).

Nov 29, 2004

  * FIXED: lock language/type atom.    Djamé Seddah.

Oct 19, 2004

  * FIXED: Bug#194: Locking problem using read access inside a
    tranaction. Sandro Hawke.

  * ADDED: Do goal expansion on the argument of rdf_transaction/1. Sandro
    Hawke.

Oct 18, 2004 (version 2.2.0)

  * ADDED: rdf_transaction/1

Oct 13, 2004

  * FIXED: Total reorganisation of the multi-threaded access using 
    redesigned locking which allows for one writer and multiple readers.

Oct 12, 2004

  * INTERNAL: Preparing for seperate databases by combining all global
    data in a single structure.

Oct 6, 2004

  * ADDED/FIXED: Various issues in the documentation.

Sep 29, 2004

  * FIXED: Avoid continuous recomputation of `direct' (rdf) branching
    factors.

Sep 28, 2004

  * FIXED: complexity estimate for not-indexed queries (crash).

Sep 14, 2004

  * ENHANCED: Actually start of with small tables and resize them if the
    triple count increases.  Reduces memory usage and improves speed on
    erasing and re-hashing small datasets.

  * FIXED: Bug#183: memory corruption due to invalid free.  Sandro Hawke.
    Same test also provided other consistency errors.

Sep 2, 2004

  * FIXED: rdfs_subclass_of(+Class, -Super) to relate all classes 
    implicitely to rdfs:Resource (rdfs entailment rule).
