@@ -1,3 +1,7 @@
+Mar 6, 2005
+
+  * FIXED: Added code to emit XML literal values using library(sgml_write).
+
 Mar 01, 2005
 
   * FIXED/ADDED: encoding issues.  Now allows writing RDF files using
